--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,11 @@
 }
 
 .dropbtn {
-  background-color: #04AA6D;
+  background-color: #4f6666;
   color: white;
   padding: 16px;
   font-size: 24px;
   border-radius: 0px;
-  border: none;
   width: 100%;
 }
 
@@ -41,4 +40,15 @@
 
 .dropdown:hover .dropdown-content {display: block;}
 
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropbtn {background-color: #acfc5c;}
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 2s forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
