--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Inter", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(138,227,235,255);
-  background-color: rgba(138,227,235,255);
+  /* color: rgba(138,227,235,255); */
+  color: black;
+  background-color: black;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -33,6 +34,8 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  justify-content: left;
+  margin: 0;
 }
 
 button {
@@ -45,6 +48,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  /* margin-right: 1rem; */
 }
 button:hover {
   border-color: #646cff;
@@ -56,8 +60,9 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: rgba(138,227,235,255);
-    background-color: #8ae3eb;
+    /* color: rgba(138,227,235,255); */
+    /* background-color: #8ae3eb; */
+    background-color: #2E2E2E;
   }
   a:hover {
     color: #747bff;
